--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.4",
-    "sequelize-auto": "^0.8.8"
+    "sequelize-auto": "^0.8.8",
+    "slugify": "^1.6.6"
   }
 }
