--- a/.github/workflows/main_ShareDotAPI.yml
+++ b/.github/workflows/main_ShareDotAPI.yml
@@ -39,18 +39,20 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
+    permissions:
+      id-token: write #This is required for requesting the JWT
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: node-app
       
-      - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v3
-        id: deploy-to-webapp
+      - name: Login to Azure
+        uses: azure/login@v2
         with:
-          app-name: 'ShareDotAPI'
-          slot-name: 'Production'
-          package: .
-          publish-profile: ${{ secrets.AzureAppService_PublishProfile_61889798345b4a428a4c25472c864af7 }}
+          client-id: ${{ secrets.__clientidsecretname__ }}
+          tenant-id: ${{ secrets.__tenantidsecretname__ }}
+          subscription-id: ${{ secrets.__subscriptionidsecretname__ }}
+
+      - name: 'Dep
