--- a/web.config
+++ b/web.config
@@ -1,22 +1,20 @@
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <system.webServer>
     <handlers>
-      <add name="iisnode" path="server.js" verb="*" modules="iisnode"/>
+      <add name="Node.js" path="*" verb="*" 
+           modules="FastCgiModule" 
+           scriptProcessor="C:\Program Files\nodejs\node.exe|D:\home\site\wwwroot\server.js" 
+           resourceType="Unspecified" />
     </handlers>
+
     <rewrite>
       <rules>
-        <rule name="Nodejs">
-          <match url="/*" />
-          <action type="Rewrite" url="server.js" />
+        <rule name="NodeJs" stopProcessing="true">
+          <match url="(.*)" />
+          <action type="Rewrite" url="D:\home\site\wwwroot\server.js" />
         </rule>
       </rules>
     </rewrite>
-    <security>
-      <requestFiltering>
-        <hiddenSegments>
-          <add segment="node_modules" />
-        </hiddenSegments>
-      </requestFiltering>
-    </security>
   </system.webServer>
 </configuration>
