--- a/web.config
+++ b/web.config
@@ -1,20 +1,22 @@
-<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <system.webServer>
     <handlers>
-      <add name="Node.js" path="*" verb="*" 
-           modules="FastCgiModule" 
-           scriptProcessor="C:\Program Files\nodejs\node.exe|D:\home\site\wwwroot\server.js" 
-           resourceType="Unspecified" />
+      <add name="iisnode" path="server.js" verb="*" modules="iisnode"/>
     </handlers>
-
     <rewrite>
       <rules>
-        <rule name="NodeJs" stopProcessing="true">
-          <match url="(.*)" />
-          <action type="Rewrite" url="D:\home\site\wwwroot\server.js" />
+        <rule name="Nodejs">
+          <match url="/*" />
+          <action type="Rewrite" url="server.js" />
         </rule>
       </rules>
     </rewrite>
+    <security>
+      <requestFiltering>
+        <hiddenSegments>
+          <add segment="node_modules" />
+        </hiddenSegments>
+      </requestFiltering>
+    </security>
   </system.webServer>
 </configuration>
