--- a/vercel.json
+++ b/vercel.json
@@ -2,12 +2,12 @@
     "version": 2,
     "builds": [
       {
-        "src": "app.js",
+        "src": "./server.js",
         "use": "@vercel/node"
       }
     ],
     "routes": [
-      { "src": "/api/(.*)", "dest": "app.js" }
+      { "src": "/(.*)", "dest": "/server.js" }
     ]
   }
   
