--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "nodemon": "^2.0.22",
     "@azure/storage-blob": "^12.25.0",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
